vlib/v/checker/tests/fn_call_arg_mismatch_err_a.vv
fn abc(x []int) {
	println(x)
}

fn main() {
	a := [1, 2, 3]
	go abc(&a)
	println('done')
}
